add postgres db
